[gd_scene load_steps=10 format=2]

[ext_resource path="res://menus/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/GUI/long_tab.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/empty_.png" type="Texture" id=3]
[ext_resource path="res://menus/special_buttons/button_cancel.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/scores.gd" type="Script" id=6]
[ext_resource path="res://menus/ScrollContainer.gd" type="Script" id=7]
[ext_resource path="res://assets/font/EightBitDragon-anqx.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 8 )

[node name="TextureRect" type="TextureRect"]
margin_right = 1280.0
margin_bottom = 768.0
texture = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 1292.0
margin_bottom = 10.0
rect_min_size = Vector2( 1280, 768 )
rect_clip_content = false
scroll_horizontal_enabled = false
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="front_panel" type="TextureRect" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 3982.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="score_board" type="Label" parent="ScrollContainer/front_panel"]
margin_left = 360.0
margin_top = 64.0
margin_right = 912.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 1 )
text = "Score Board"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_board_text" type="RichTextLabel" parent="ScrollContainer/front_panel"]
margin_left = 136.0
margin_top = 264.0
margin_right = 1136.0
margin_bottom = 3830.59
custom_fonts/italics_font = ExtResource( 1 )
custom_fonts/bold_font = ExtResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]
[b]Total Score:[/b]
[s]                              [/s]

_total_score_


[s]                                                     [/s]

[b]High Scores:[/b]
[s]                              [/s]

[b]Plains:[/b]

[i]Sloth: _0_0_

Normal: _0_1_

Hard: _0_2_

Impossible: _0_3_[/i]

[s]                                                     [/s]


[b]Highway:[/b]

[i]Sloth: _1_0_

Normal: _1_1_

Hard: _1_2_

Impossible: _1_3_[/i]

[s]                                                     [/s]


[b]Snow field:[/b]

[i]Sloth: _2_0_

Normal: _2_1_

Hard: _2_2_

Impossible: _2_3_[/i]

[s]                                                     [/s]


[b]Volcano:[/b]

[i]Sloth: _3_0_

Normal: _3_1_

Hard: _3_2_

Impossible: _3_3_[/i]

[s]                                                     [/s]


[b]Phantom field:[/b]

[i]Sloth: _4_0_

Normal: _4_1_

Hard: _4_2_

Impossible: _4_3_[/i]

[/center]"
text = "
Total Score:
                              

_total_score_


                                                     

High Scores:
                              

Plains:

Sloth: _0_0_

Normal: _0_1_

Hard: _0_2_

Impossible: _0_3_

                                                     


Highway:

Sloth: _1_0_

Normal: _1_1_

Hard: _1_2_

Impossible: _1_3_

                                                     


Snow field:

Sloth: _2_0_

Normal: _2_1_

Hard: _2_2_

Impossible: _2_3_

                                                     


Volcano:

Sloth: _3_0_

Normal: _3_1_

Hard: _3_2_

Impossible: _3_3_

                                                     


Phantom field:

Sloth: _4_0_

Normal: _4_1_

Hard: _4_2_

Impossible: _4_3_

"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_cancel" parent="ScrollContainer/front_panel" instance=ExtResource( 4 )]
margin_left = 200.0
margin_top = 3736.0
margin_right = 352.0
margin_bottom = 3864.0
